tests/pass/BAND.java
package pass;

public class BAND {

	public int and(int x, int y) {
		return x & y;
	}
	
}
