tests/fail/BAND.java
package fail;

public class BAND {
	
	public static void main(String[] args) {
		System.out.println(true & 10);
	}
	
}
